little bit of pagination, Having to relearn a ton if this it has been a little since I have worked on html and css

--- a/public/displayworkouts.html
+++ b/public/displayworkouts.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Workout Tracker</title>
+  <h1 class="pageTitle">Workout Tracker</h1>
   <link rel="icon" href="favicon.ico" />
   <style>
     body {
@@ -19,10 +19,14 @@
     .workout-item {
       margin: 10px 0;
     }
+    .pageTitle{
+      padding-left: 45%;
+      font-size: 40px;
+      font-family: fangsong;
+    }
   </style>
 </head>
 <body>
-  <h1>Workout Tracker</h1>
   <button id="load-workouts">Load Workouts</button>
   <ul id="workout-list"></ul>
 
