--- a/public/displayworkouts.html
+++ b/public/displayworkouts.html
@@ -7,27 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <h1 class="pageTitle">Workout Tracker</h1>
   <link rel="icon" href="favicon.ico" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    #workout-list {
-      list-style: none;
-      padding: 0;
-    }
-    .workout-item {
-      margin: 10px 0;
-    }
-    .pageTitle{
-      padding-left: 45%;
-      font-size: 40px;
-      font-family: fangsong;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-  <button id="load-workouts">Load Workouts</button>
+  <button class="start-button" id="load-workouts">Load Workouts</button>
   <ul id="workout-list"></ul>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
