added an average page

--- a/public/displayworkouts.html
+++ b/public/displayworkouts.html
@@ -12,10 +12,14 @@
 </head>
 <body>
   <button class="start-button" id="load-workouts">Load Workouts</button>
+
+
   <ul id="workout-list"></ul>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
   <script type="module" src="fetchWorkouts.js"></script>
+  <button class="start-button" onclick="location.href='index.html'">Home</button>
+
 </body>
 </html>
