--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <h1>Hevy Workout</h1>
     <h3>UI By David Marvin</h3>
     <button class="start-button" onclick="location.href='displayworkouts.html'">Your Workout List</button>
-    <button class="start-button" onclick="location.href='displayworkouts.html'">placeholder 1</button>
+    <button class="start-button" onclick="location.href='average.html'">Average Weights</button>
     <button class="start-button" onclick="location.href='displayworkouts.html'">placeholder 2</button>
 
 
