--- a/public/average.html
+++ b/public/average.html
@@ -15,6 +15,7 @@
 <body>
     <h1>Workout Averages</h1>
     <button id="calculate-average">Calculate Average Weight</button>
+    <button class="start-button" onclick="location.href='index.html'">Home</button>
     <div id="average-results"></div>
 </body>
 </html>
