--- a/public/average.html
+++ b/public/average.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1>Workout Averages</h1>
-    <button class="start-button" id="calculate-average" style="width: auto;">Calculate Average Weight</button>
+    <button class="start-button" id="calculate-average" style="width: auto;">Calculate Average (LBS)</button>
     <div></div>
     <button class="start-button" onclick="location.href='index.html'">Home</button>
     <div id="average-results"></div>
